tests/ui/let_decl_in_parentheses copy.rs
use metamatch::unquote;
fn main() {
    unquote! {
        (let foo = 3) + 3
    }
}
